--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
+    {% for post in site.related_posts limit:5 %}
       <li>
         <h3>
           <a href="{{ post.url }}">
@@ -23,3 +23,5 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+
+<div class="just-comments" data-apikey="70c4580c-0e29-4d54-ae05-a36c79cf3875"></div>
